welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: not found: value biscuit
var biscuit()=false;var x ="";
    ^Program:4: error: not found: value biscuit
while (biscuit()) {
       ^Program:8: error: not found: value biscuit
		biscuit==true
                ^Program:12: error: type mismatch;
 found   : Unit
 required: Boolean
  recule(6);
        ^