welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
var biscuit()=false;var x ="";
while (biscuit()) {
      for (x <- 1 to 6) {
	avance();
	if (estSurBiscuit()) {
		biscuit==true
	}
   }
  }	
  recule(6);
}

